// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`A-UT-SNAPSHOT: Admin Login Page Snapshot Tests should match admin login page snapshot (default state) 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-red-50 to-red-100 dark:from-gray-900 dark:to-gray-800"
>
  <nav
    data-testid="admin-login-navbar"
  >
    Admin Navbar
  </nav>
  <div
    class="pt-20 flex items-center justify-center min-h-screen p-4"
  >
    <div
      class="max-w-md w-full"
    >
      <div
        class="text-center mb-8"
      >
        <h1
          class="text-3xl font-bold text-gray-900 dark:text-white mb-2"
        >
          Admin Login
        </h1>
        <p
          class="text-gray-600 dark:text-gray-400"
        >
          Access the admin dashboard
        </p>
      </div>
      <div
        class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-8"
      >
        <form
          class="space-y-6"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2"
              for="email"
            >
              Email Address
            </label>
            <input
              class="w-full px-4 py-3 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent dark:bg-gray-700 dark:text-white transition-colors"
              id="email"
              placeholder="Enter your email"
              required=""
              type="email"
              value=""
            />
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2"
              for="password"
            >
              Password
            </label>
            <input
              class="w-full px-4 py-3 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent dark:bg-gray-700 dark:text-white transition-colors"
              id="password"
              placeholder="Enter your password"
              required=""
              type="password"
              value=""
            />
          </div>
          <button
            class="w-full bg-red-600 hover:bg-red-700 disabled:bg-gray-400 disabled:cursor-not-allowed text-white font-medium py-3 px-4 rounded-lg transition-colors"
            type="submit"
          >
            Sign In
          </button>
        </form>
        <div
          class="mt-6 text-center"
        >
          <a
            href="/"
          >
            ← Back to Home
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`A-UT-SNAPSHOT: Admin Login Page Snapshot Tests should match admin login page snapshot (loading state) 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-red-50 to-red-100 dark:from-gray-900 dark:to-gray-800"
>
  <nav
    data-testid="admin-login-navbar"
  >
    Admin Navbar
  </nav>
  <div
    class="pt-20 flex items-center justify-center min-h-screen"
  >
    <div
      class="text-center"
    >
      <div
        class="animate-spin rounded-full h-12 w-12 border-b-2 border-red-600 mx-auto mb-4"
      />
      <p
        class="text-gray-600 dark:text-gray-400"
      >
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`A-UT-SNAPSHOT: Admin Login Page Snapshot Tests should match admin login page snapshot (with form values) 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-red-50 to-red-100 dark:from-gray-900 dark:to-gray-800"
>
  <nav
    data-testid="admin-login-navbar"
  >
    Admin Navbar
  </nav>
  <div
    class="pt-20 flex items-center justify-center min-h-screen p-4"
  >
    <div
      class="max-w-md w-full"
    >
      <div
        class="text-center mb-8"
      >
        <h1
          class="text-3xl font-bold text-gray-900 dark:text-white mb-2"
        >
          Admin Login
        </h1>
        <p
          class="text-gray-600 dark:text-gray-400"
        >
          Access the admin dashboard
        </p>
      </div>
      <div
        class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-8"
      >
        <form
          class="space-y-6"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2"
              for="email"
            >
              Email Address
            </label>
            <input
              class="w-full px-4 py-3 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent dark:bg-gray-700 dark:text-white transition-colors"
              id="email"
              placeholder="Enter your email"
              required=""
              type="email"
              value="test-admin@example.com"
            />
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2"
              for="password"
            >
              Password
            </label>
            <input
              class="w-full px-4 py-3 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent dark:bg-gray-700 dark:text-white transition-colors"
              id="password"
              placeholder="Enter your password"
              required=""
              type="password"
              value="test-password-123"
            />
          </div>
          <button
            class="w-full bg-red-600 hover:bg-red-700 disabled:bg-gray-400 disabled:cursor-not-allowed text-white font-medium py-3 px-4 rounded-lg transition-colors"
            type="submit"
          >
            Sign In
          </button>
        </form>
        <div
          class="mt-6 text-center"
        >
          <a
            href="/"
          >
            ← Back to Home
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
